## Makefile.am -- Process this file with automake to produce Makefile.in
## Copyright (C) 2000, 2006 Gary V. Vaughan
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2, or (at your option)
## any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
## MA 02110-1301, USA.

SUBDIRS = HMT_masks \
	NCEP_masks

polydir = $(pkgdatadir)/poly

poly_DATA = \
	APL.poly \
	ATC.poly \
	CAM.poly \
	CAR.poly \
	ECA.poly \
	GLF.poly \
	GMC.poly \
	GRB.poly \
	HWI.poly \
	LMV.poly \
	MDW.poly \
	MEX.poly \
	NAK.poly \
	NAO.poly \
	NEC.poly \
	NMT.poly \
	NPL.poly \
	NSA.poly \
	NWC.poly \
	PRI.poly \
	SAO.poly \
	SEC.poly \
	SMT.poly \
	SPL.poly \
	SWC.poly \
	SWD.poly \
	WCA.poly \
	EAST.poly \
	WEST.poly \
	CONUS.poly \
	MLB_Stadiums.txt \
	ncep_vx_regions.pdf

EXTRA_DIST = ${poly_DATA}

MAINTAINERCLEANFILES 	= Makefile.in 
