## Makefile.am -- Process this file with automake to produce Makefile.in
## Copyright (C) 2000, 2006 Gary V. Vaughan
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2, or (at your option)
## any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
## MA 02110-1301, USA.

psdir = $(pkgdatadir)/ps

ps_DATA = \
	00.afm \
	01.afm \
	02.afm \
	03.afm \
	04.afm \
	05.afm \
	06.afm \
	07.afm \
	08.afm \
	09.afm \
	10.afm \
	11.afm \
	12.afm \
	13.afm \
	14.afm \
	15.afm \
	16.afm \
	17.afm \
	18.afm \
	19.afm \
	20.afm \
	21.afm \
	22.afm \
	23.afm \
	24.afm \
	25.afm \
	26.afm \
	27.afm \
	28.afm \
	29.afm \
	30.afm \
	31.afm \
	32.afm \
	33.afm \
	README

EXTRA_DIST = ${ps_DATA}

MAINTAINERCLEANFILES 	= Makefile.in
