## Makefile.am -- Process this file with automake to produce Makefile.in
## Copyright (C) 2000, 2006 Gary V. Vaughan
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2, or (at your option)
## any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
## MA 02110-1301, USA.

tablefilesdir = $(pkgdatadir)/table_files

tablefiles_DATA = \
	met_header_columns_V8.1.txt \
	met_header_columns_V8.0.txt \
	met_header_columns_V7.0.txt \
	met_header_columns_V6.1.txt \
	met_header_columns_V6.0.txt \
	met_header_columns_V5.2.txt \
	met_header_columns_V5.1.txt \
	met_header_columns_V5.0.txt \
	met_header_columns_V4.2.txt \
	met_header_columns_V4.1.txt \
	met_header_columns_V4.0.txt \
	met_header_columns_V3.1.txt \
	met_header_columns_V3.0.1.txt \
	met_header_columns_V3.0.txt \
	met_header_columns_V2.0.txt \
	stat_column_description.txt \
	obs_error_table.txt \
	grib1_af_131_57.txt \
	grib1_af_133_57.txt \
	grib1_cptec_254_64.txt \
	grib1_dwd_201_146.txt \
	grib1_dwd_201_78.txt \
	grib1_dwd_202_146.txt \
	grib1_dwd_202_78.txt \
	grib1_dwd_203_146.txt \
	grib1_dwd_203_78.txt \
	grib1_dwd_204_146.txt \
	grib1_dwd_204_78.txt \
	grib1_dwd_205_146.txt \
	grib1_dwd_205_78.txt \
	grib1_dwd_2_146.txt \
	grib1_dwd_2_78.txt \
	grib1_ecmwf_128_98.txt \
	grib1_ecmwf_129_98.txt \
	grib1_ecmwf_130_98.txt \
	grib1_ecmwf_131_98.txt \
	grib1_ecmwf_132_98.txt \
	grib1_ecmwf_133_98.txt \
	grib1_ecmwf_140_98.txt \
	grib1_ecmwf_150_98.txt \
	grib1_ecmwf_151_98.txt \
	grib1_ecmwf_160_98.txt \
	grib1_ecmwf_162_98.txt \
	grib1_ecmwf_170_98.txt \
	grib1_ecmwf_171_98.txt \
	grib1_ecmwf_172_98.txt \
	grib1_ecmwf_173_98.txt \
	grib1_ecmwf_174_98.txt \
	grib1_ecmwf_180_98.txt \
	grib1_ecmwf_190_98.txt \
	grib1_ecmwf_200_98.txt \
	grib1_ecmwf_210_98.txt \
	grib1_ecmwf_211_98.txt \
	grib1_ecmwf_228_98.txt \
	grib1_ncep_128_7.txt \
	grib1_ncep_129_7.txt \
	grib1_ncep_130_7.txt \
	grib1_ncep_131_7.txt \
	grib1_ncep_132_7.txt \
	grib1_ncep_133_7.txt \
	grib1_ncep_140_7.txt \
	grib1_ncep_141_7.txt \
	grib1_ncep_2_7.txt \
	grib1_lidar2nc.txt \
	grib2_af_gpp.txt \
	grib2_all.txt \
	grib2_bom.txt \
	grib2_mrms.txt \
	grib2_ndfd.txt

EXTRA_DIST = ${tablefiles_DATA}

MAINTAINERCLEANFILES 	= Makefile.in
